<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name_simplicity_Connect">Si Connect</string>
    <string name="bluetooth_adapter_bar_disabled">Bluetooth adapter disabled</string>
    <string name="toast_bluetooth_not_enabled">Bluetooth not enabled!</string>
    <string name="toast_bluetooth_enabled">Bluetooth enabled!</string>
    <string name="bluetooth_adapter_bar_turning_on">Turning on Bluetooth adapter…</string>
    <string name="bluetooth_adapter_enable_bar_enable">Enable</string>
    <string name="low_priority">Low Priority (100 &#8211; 125 ms)</string>
    <string name="balanced_priority">Bal. Priority (30 &#8211; 100 ms)</string>
    <string name="high_priority">High Priority (7.5 &#8211; 15 ms)</string>
    <string name="connection_priority_high">Connection priority: high</string>
    <string name="connection_priority_low">Connection priority: low power</string>
    <string name="connection_priority_balanced">Connection priority: balanced</string>
    <string name="Device_address">Device Address</string>
    <string name="non_connectible">Non-Connectible</string>
    <string name="connectible">Connectible</string>
    <string name="Request">Request</string>
    <string name="UUID_colon_space">UUID: \u0020</string>
    <string name="UUID_label">uuid</string>
    <string name="value_colon_space">Value: \u0020</string>
    <string name="Enter_new_name">Enter new name</string>
    <string name="filter_edit_text_search_criteria">Name, address or raw data</string>
    <string name="Beacon_Type">Beacon Type</string>
    <string name="only_favorites">Favorites</string>
    <string name="only_connectible">Connectible</string>
    <string name="only_bonded">Bonded</string>
    <string name="Descriptors_colon">Descriptors:</string>
    <string name="no_characteristics">No characteristics in service</string>
    <string name="more_info">More Info</string>
    <string name="Less_Info">Less Info</string>
    <string name="log_example_time">Example log time</string>
    <string name="log_example_text">Example log text: longer, to show it in two or more lines</string>
    <string name="RSSI">RSSI</string>
    <string name="n_dBm">%d dBm</string>
    <string name="MTU_colon_n">MTU: %d</string>
    <string name="Preparing_logs_please_wait">Preparing logs, please wait&#8230;</string>
    <string name="Logs_cannot_be_generated">Logs cannot be generated!</string>
    <string name="devices_sorted_by_descending_rssi">Devices sorted by descending rssi</string>
    <string name="connection_interval">Connection Interval</string>
    <string name="not_advertising_shortcut">N/A</string>
    <string name="You_cannot_send_empty_value_to_charac">You cannot send an empty value to characteristic!</string>
    <string name="Write_with_response">Write with response (write request)</string>
    <string name="Write_without_response">Write without response (write command)</string>
    <string name="leave_application_info">Leaving application will disconnect all devices!</string>
    <string name="Do_not_give_this_warning_again">Do not give this warning again</string>
    <string name="Leave_Application">Leave Application?</string>
    <string name="filter_rssi_not_set">Not Set</string>
    <string name="ota_service_name">OTA Service</string>
    <string name="blinky_service_name">Blinky</string>
    <string name="throughput_test_service_name">Throughput Test Service</string>
    <string name="throughput_information_service_name">Throughput Information Service</string>
    <string name="ota_control_attribute_characteristic_name" formatted="false">OTA Control Attribute</string>
    <string name="ota_data_characteristic_name">OTA Data</string>
    <string name="fw_version_characteristic_name">Fw version</string>
    <string name="ota_version_characteristic_name">OTA Version</string>
    <string name="bootloader_version_characteristic_name">Bootloader Version</string>
    <string name="application_version_characteristic_name">Application Version</string>
    <string name="led_control_characteristic_name">LED Control</string>
    <string name="report_button_characteristic_name">Report Button</string>
    <string name="indications_characteristic_name">Indications</string>
    <string name="notifications_characteristic_name">Notifications</string>
    <string name="transmission_on_characteristic_name">Transmission ON</string>
    <string name="throughput_result_characteristic_name">Throughput Result</string>
    <string name="connection_phy_characteristic_name">Connection PHY</string>
    <string name="connection_interval_characteristic_name">Connection Interval</string>
    <string name="slave_latency_characteristic_name">Slave Latency</string>
    <string name="supervision_timeout_characteristic_name">Supervision Timeout</string>
    <string name="pdu_size_characteristic_name">PDU Size</string>
    <string name="mtu_size_characteristic_name">MTU Size</string>
    <string name="type">Type</string>
    <string name="temperature">Temperature</string>
    <string name="f_symbol">°F</string>
    <string name="c_symbol">°C</string>
    <string name="content_desc_no_devices_discovered">Warning, no devices discovered</string>
    <string name="select_device">Select a BLE Device</string>
    <string name="DEVICE_LIST">DEVICE LIST (%d)</string>
    <string name="soc_must_be_connected">A circuit board (SoC) must be connected and
        running \"%s\" firmware."</string>
    <string name="please_connect_a_device">Please connect a device</string>
    <string name="reading_board_type">Reading board type…</string>
    <string name="failed_to_discover_services">Failed to discover services</string>
    <string name="main_menu_title">Menu title</string>
    <string name="main_menu_description">Short description of menu tile</string>
    <string name="warning_bar_additional_info">Info</string>
    <string name="location_enable">Enable</string>
    <string name="location_disabled">Location disabled</string>
    <string name="notification_disabled">Notifications Disabled</string>
    <string name="bluetooth_permissions_denied">Bluetooth permissions denied</string>
    <string name="notifications_permission_denied">Notification permissions denied</string>
    <string name="notification_click_to_allow">Enable</string>
    <string name="Location_service">Location service</string>
    <string name="location_service_info">On some Android phones you have to enable Location
        service in order to scan for Bluetooth Low Energy devices. If you can\'t find any
        Bluetooth devices, please ensure you have enabled Location service.</string>
    <string name="location_permission">Location permission</string>
    <string name="location_permission_info">In order for this app to use the Location service,
        you have to grant a permission first. Please keep in mind, that on some Android
        devices this service is needed for proper Bluetooth Low Energy device discovery.</string>
    <string name="bluetooth_permissions">Bluetooth permissions</string>
    <string name="notification_permissions">Notification permissions</string>
    <string name="bluetooth_permissions_info">Since Android 12, performing BLE-related operations
        (such as scanning, advertising or connecting) requires the user to explicitly grant the
        \"Nearby devices\" permission for the app. Please keep in mind that this app relies
        heavily on these system features and its capabilities will be severely reduced without them.
    </string>
    <string name="notification_permissions_info">To ensure you have the best experience with our app, we need your help! Enabling notifications allows us to keep you informed about essential updates related to your nearby Bluetooth devices.&#10;&#10;
    \n\n
    <b>Why Enable Notifications?</b>&#10;\n
    - <b>Real-Time Alerts:</b> Receive instant notifications about successful connections, disconnections, and any issues that may arise while using Bluetooth devices.&#10;\n
    - <b>Timely Updates:</b> Get notified when new features or device settings are available, ensuring you’re always using the latest capabilities of your connected devices.&#10;\n
    - <b>Critical Reminders:</b> Stay aware of important events, such as battery status and maintenance alerts, so you can manage your devices effectively.&#10;&#10;

    Your privacy is our priority, and we only send notifications that enhance your experience. \n\nPlease allow notifications so you can make the most of your Bluetooth-enabled devices.</string>
    <string name="text_advertiser_purpose_explanation">Utilize this device as a Bluetooth \n Low
        Energy peripheral</string>
    <string name="main_menu_description_thermometer">View readings from the Health Thermometer service</string>
    <string name="main_menu_description_browser">View info about nearby devices and their properties.</string>
    <string name="main_menu_description_connected_lighting">Control a Dynamic Multiprotocol application of connected Device.</string>
    <string name="main_menu_description_range_test">Evaluate the link budget and range of EFR32</string>
    <string name="main_menu_description_throughput">Measure throughput between the mobile device and EFR32</string>
    <string name="main_menu_description_blinky">Control LED and receive button presses on a Silabs kit</string>
    <string name="title_uuid_dictionary">UUID Dictionary</string>
    <string name="request_mtu">Request MTU</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_filter">Filter</string>
    <string name="button_sort">Sort by RSSI</string>
    <string name="button_ok">@android:string/ok</string>
    <string name="button_export">Export</string>
    <string name="ibeacon">iBeacon</string>
    <string name="eddystone">Eddystone</string>
    <string name="alt_beacon">AltBeacon</string>
    <string name="about_mappings_about">About</string>
    <string name="advertiser_title_advertising_type">Advertising Type</string>
    <string name="advertiser_label_legacy_advertising">Legacy Advertising</string>
    <string name="advertiser_label_extended_advertising">Extended Advertising</string>
    <string name="advertiser_label_include_tx_power">Include TX Power</string>
    <string name="advertiser_label_anonymous">Anonymous</string>
    <string name="advertiser_setting_beacon_unspecified">Unspecified</string>
    <string name="advertiser_note_extended_advertising_not_supported">Note: This device does not support extended advertising</string>
    <string name="iop_test_note_device_name_dialog">This feature will execute a set of Bluetooth
        operations against a Silicon Labs device to test for Interoperability (IOP). For more
        information about IOP and which sample application to use please read:</string>
    <string name="iop_test_label_interoperability_test">Interoperability Test</string>
    <string name="action_settings">Settings</string>
    <string name="sort_menu_icon">Sort by RSSI</string>
    <string name="filter_menu_icon">Filter</string>
    <string name="content_desc_search_icon">Search icon</string>
    <string name="filter_search_label">Search</string>
    <string name="filter_status_label">Status</string>
    <string name="filter_btn_apply_filters">Apply Filters</string>
    <string name="filter_seekbar_min">-130</string>
    <string name="filter_seekbar_max">0</string>
    <string name="logs">Logs</string>
    <string name="connection_priority">Connection Priority</string>
    <string name="connection_priority_description">This function will send a connection
        parameter update request to the remote device. </string>
    <string name="main_navigation_scan_title">Scan</string>
    <string name="main_navigation_configure_title">Configure</string>
    <string name="main_navigation_test_title">Test</string>
    <string name="main_navigation_demo_title">Demo</string>
</resources>