<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/menu_uuid_dictionary"
        android:icon="@drawable/ic_dictionary_book"
        android:title="@string/title_uuid_dictionary"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_filter"
        android:icon="@drawable/redesign_ic_menu_scanner_filter"
        app:iconTint="@color/menu_icon"
        android:title="@string/filter_menu_icon"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_sort"
        android:icon="@drawable/redesign_ic_menu_scanner_sort"
        app:iconTint="@color/menu_icon"
        android:title="@string/sort_menu_icon"
        app:showAsAction="ifRoom" />
</menu>
