<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    android:paddingTop="16dp">

    <TextView
        style="@style/TitleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/advertiser_title_advertising_type" />

    <RadioButton
            android:id="@+id/rb_legacy_advertising"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:checked="true"
            android:text="@string/advertiser_label_legacy_advertising"
            style="@style/TextMedium"/>

    <RadioButton
        android:id="@+id/rb_extended_advertising"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/advertiser_label_extended_advertising"
        style="@style/TextMedium"/>

    <Spinner
        android:id="@+id/sp_legacy"
        style="@style/CustomSpinner"
        tools:listitem="@layout/spinner_item_layout_medium"
        android:layout_width="match_parent"
        android:layout_marginTop="12dp" />

    <Spinner
        android:id="@+id/sp_extended"
        style="@style/CustomSpinner"
        tools:listitem="@layout/spinner_item_layout_medium"
        android:layout_width="match_parent"
        android:layout_marginTop="12dp"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cb_include_tx_power"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/advertiser_label_include_tx_power"
            android:button="@null"
            android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
            style="@style/TextMedium"
            android:background="?selectableItemBackground"/>

        <CheckBox
            android:id="@+id/cb_anonymous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/advertiser_label_anonymous"
            android:button="@null"
            android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
            style="@style/TextMedium"
            android:background="?selectableItemBackground"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_extended_adv_not_supported"
        style="@style/TextViewNoteInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/advertiser_note_extended_advertising_not_supported"
        android:visibility="gone" />

    <include layout="@layout/horizontal_separator" />
</LinearLayout>